- Added SystemFactory package that contains all configuration needed for the program - Changed all communicator output to jSon (lib: gson) - Added language switch (e.g. -Lang=EN runs on English sources) - Removed Jakarta Feed Parser (bugs, deprecated) - Added ROME parser